--- a/MediacalPhysicsWorls/Views/Shared/_Layout.cshtml
+++ b/MediacalPhysicsWorls/Views/Shared/_Layout.cshtml
@@ -3,11 +3,41 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Medical Physics World</title>
+    <script src="~/Scripts/bootstrap.min.js"></script>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-inverse navbar-fixed-top cbp-af-header" role="navigation">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a href="#top">
+                        <img src="../../images/site-logo-white-70pct.png" />
+                    </a>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>@Html.ActionLink("Contact us", "Contact", "Home")</li>
+                        <li>@Html.ActionLink("About", "About", "Home")</li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
+    </header>
+   
+                        @*<li><a href="~/Views/Home/About.cshtml">About</a></li>
+                        <li><a href="~/Views/Home/Contact.cshtml">Contact Us</a></li>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -16,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Medical Physics World", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -26,15 +56,134 @@
                 </ul>
             </div>
         </div>
+    </div>*@
+
+    <div class="container-fluid container-sm-height">
+        <div class="row row-sm-height">
+
+            <section class="col-sm-9 col-lg-8 col-sm-push-3 col-lg-push-2 col-sm-height">
+
+                <article>
+                    <h2>Why I Went Into the Lake</h2>
+                    <img src="../../images/lake.jpg" />
+                    <div class="row">
+                        <p class="col-sm-10">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                        <div class="col-sm-2">
+                            <input type="button" class="btn btn-primary" value="More..." />
+                        </div>
+                    </div>
+                </article>
+
+                <article>
+                    <h2>My Name is NOT Bullwinkle</h2>
+                    <img src="../../images/elk.jpg" />
+                    <div class="row">
+                        <p class="col-sm-10">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                        <div class="col-sm-2">
+                            <input type="button" class="btn btn-primary" value="More..." />
+                        </div>
+                    </div>
+                </article>
+
+                <article>
+                    <h2>There's Gotta be a Penguin Up Here Somewhere</h2>
+                    <img src="../../images/snowboarder.jpg" />
+                    <div class="row">
+                        <p class="col-sm-10">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        </p>
+                        <div class="col-sm-2">
+                            <input type="button" class="btn btn-primary" value="More..." />
+                        </div>
+                    </div>
+                </article>
+
+            </section>
+
+            <aside class="col-sm-3 col-lg-2 col-sm-pull-9 col-lg-pull-8 col-sm-height">
+                <h4 class="range-title">
+                    <b>Mountain Ranges</b>
+                </h4>
+
+                <div class="range-list">
+
+                    <a href="wasatch-range.html">
+                        <div>
+                            <img src="../../images/range-1.png" />
+                            <h4>Wasatch Range</h4>
+                        </div>
+                    </a>
+
+                    <a href="mummy-range.html">
+                        <img src="../../images/range-2.png" />
+                        <h4>Mummy Range</h4>
+                    </a>
+
+                    <a href="front-range.html">
+                        <img src="../../images/range-3.png" />
+                        <h4>Front Range</h4>
+                    </a>
+
+                    <a href="sawtooth-range.html">
+                        <img src="../../images/range-4.png" />
+                        <h4>Sawtooth Range</h4>
+                    </a>
+
+                    <a href="west-elk-mountains.html">
+                        <img src="../../images/range-5.png" />
+                        <h4>West Elk Mountains</h4>
+                    </a>
+                </div>
+
+            </aside>
+
+            <aside class="sports-icon-list col-xs-12 col-md-2 hidden-md col-sm-height">
+                <a href="downhill.html">
+                    <img src="../../images/icon-downhill.png" alt="Downhill" />
+                    <h6>Downhill</h6>
+                </a>
+
+                <a href="snowboarding.html">
+                    <img src="../../images/icon-snowboard.png" alt="Snowboarding" />
+                    <h6>Snowboarding</h6>
+                </a>
+
+                <a href="bobsled.html">
+                    <img src="../../images/icon-bobsled.png" alt="Bobsled" />
+                    <h6>Bobsled</h6>
+                </a>
+
+                <a href="cross-country.html">
+                    <img src="../../images/icon-cross-country.png" alt="Cross Country" />
+                    <h6>Cross Country</h6>
+                </a>
+
+                <a href="biathlon.html">
+                    <img src="../../images/icon-biathlon.png" alt="Biathlon" />
+                    <h6>Biathlon</h6>
+                </a>
+            </aside>
+        </div>
     </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Medical Physics World</p>
         </footer>
     </div>
-
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/classie.js"></script>
+    <script src="~/Scripts/cbpAnimatedHeader.js"></script>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
